@@ -2,6 +2,10 @@
 
     Release 1.12
 
+    Don't require IO::String for perl-5.8 as
+    it has that feature built in.  Based on patch
+    by Slaven Rezic <slaven.rezic@berlin.de>.
+
     Looks like the TIFF support that was really
     functional because I forgot to add
     lib/Image/Info/TIFF.pm to the MANIFEST :-(
